--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
   <li>The Chu man was not in a hurry. </li>
   <li>He immediately carved a mark on the side of the ship and said to himself,"This is where my sword fell."</li>
   <li>When the ship docked,he went into the water to find the sword according to the engraved mark,and naturally found nothing.</li>
-  <img>https://github.com/Linnny0112/Lyn_AI_show/blob/main/%E5%88%BB%E8%88%9F%E6%B1%82%E5%89%91.png?raw=true
 </ul>
+<img src="刻舟求剑.png"
