--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<html>
 <head>
   <title>深夜学堂的某一张图</title>
 </head>
+<body>
 <h1>刻舟求剑</h1>
 <ul>
   <li>Carving a boat for a sword</li>
@@ -11,3 +13,5 @@
   <li>When the ship docked,he went into the water to find the sword according to the engraved mark,and naturally found nothing.</li>
 </ul>
 <img src="刻舟求剑.png">
+</body>
+</html>
