--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <li>When the ship docked,he went into the water to find the sword according to the engraved mark,and naturally found nothing.</li>
 </ul>
 <img src="刻舟求剑.png">
+<audio src="oeasy.mp3" autoplay="" controls="" style="height:40px;width:66%;">
 </body>
 </html>
