--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <li>He immediately carved a mark on the side of the ship and said to himself,"This is where my sword fell."</li>
   <li>When the ship docked,he went into the water to find the sword according to the engraved mark,and naturally found nothing.</li>
 </ul>
-<img src="刻舟求剑.png">
+<img src="刻舟求剑小.png">
 <audio src="oeasy.mp3" autoplay="" controls="" style="height:40px;width:66%;">
 </body>
 </html>
