--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 </ul>
 <img src="刻舟求剑小.png">
 <audio src="oeasy.mp3" autoplay="" controls="" style="height:40px;width:66%;">
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=30431367&auto=1&height=66"></iframe>
+<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113542627920057&bvid=BV1nBzcY5Ehz&cid=27002407460&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 </body>
 </html>
