--- a/style.html
+++ b/style.html
@@ -1,5 +1,19 @@
-<p>My sweat suit is 
-  <span style="color: green; background:transparent">green</span> 
-  and my eyes are 
-  <span style="color: blue;background: transparent;">blue</span>
-.</p>
+<!DOCTYPE html>
+<html lang="en-US">
+ <head>
+  <title>唐诗</title>
+  <style>
+   body { color: red; }
+   p {color:green;}
+   h1 {color:blue;}
+  </style>
+ </head>
+ <body>
+    <h1>悯农</h1>
+    <p>李绅</p>
+    <p>锄禾日当午</p>
+    <p>汗滴禾下土</p>
+    <p>谁知盘中餐</p>
+    <p>粒粒皆辛苦</p>
+ </body>
+</html>
