--- a/style.html
+++ b/style.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-<html lang="en-US">
- <head>
-  <title>唐诗</title>
-  <style>
-   body { color: red; }
-   p {color:green;}
-   h1 {color:blue;}
-  </style>
- </head>
- <body>
-    <h1>悯农</h1>
-    <p>李绅</p>
-    <p>锄禾日当午</p>
-    <p>汗滴禾下土</p>
-    <p>谁知盘中餐</p>
-    <p>粒粒皆辛苦</p>
- </body>
+<html lang=en>
+    <head>
+        <meta http-equiv="refresh" content="3">
+        <meta charset=UTF-8>
+        <style>
+            p{
+                color: blue;
+            }
+            body{
+                color: red;
+            }
+            .poem{
+                color: brown;
+            }
+            .author{
+                color: green;
+            }
+        </style>
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>悯农</h1>
+        <p class="author">李绅</p>
+        <p class="poem">锄禾日当午</p>
+        <p class="poem">汗滴禾下土</p>
+        <p class="poem">谁知盘中餐</p>
+        <p class="poem">粒粒皆辛苦</p>
+    </body>
 </html>
