--- a/style.html
+++ b/style.html
@@ -10,8 +10,11 @@
             body{
                 color: red;
             }
-            .poem{
+            .poem_a{
                 color: brown;
+            }
+            .poem_b{
+                color:dark;
             }
             .author{
                 color: green;
@@ -22,9 +25,9 @@
     <body>
         <h1>悯农</h1>
         <p class="author">李绅</p>
-        <p class="poem">锄禾日当午</p>
-        <p class="poem">汗滴禾下土</p>
-        <p class="poem">谁知盘中餐</p>
-        <p class="poem">粒粒皆辛苦</p>
+        <p class="poem_a">锄禾日当午</p>
+        <p class="poem_b">汗滴禾下土</p>
+        <p class="poem_a">谁知盘中餐</p>
+        <p class="poem_b">粒粒皆辛苦</p>
     </body>
 </html>
