--- a/style.html
+++ b/style.html
@@ -10,10 +10,10 @@
             body{
                 color: red;
             }
-            .poem_a{
+            .odd{
                 color: brown;
             }
-            .poem_b{
+            .even{
                 color:dark;
             }
             .author{
@@ -25,9 +25,9 @@
     <body>
         <h1>悯农</h1>
         <p class="author">李绅</p>
-        <p class="poem_a">锄禾日当午</p>
-        <p class="poem_b">汗滴禾下土</p>
-        <p class="poem_a">谁知盘中餐</p>
-        <p class="poem_b">粒粒皆辛苦</p>
+        <p class="poem odd">锄禾日当午</p>
+        <p class="poem even">汗滴禾下土</p>
+        <p class="poem odd">谁知盘中餐</p>
+        <p class="poem even">粒粒皆辛苦</p>
     </body>
 </html>
