--- a/style.html
+++ b/style.html
@@ -17,6 +17,10 @@
             color:red;
         }
     </style>
+    <script language="javascript">
+        alert("i am dialog box!")
+    </scirpt>
+        
     <title>Document</title>
 </head>
 <body>
