--- a/style.html
+++ b/style.html
@@ -19,7 +19,7 @@
     </style>
     <script language="javascript">
         alert("i am dialog box!")
-    </scirpt>
+    </script>
         
     <title>Document</title>
 </head>
