--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="" content="">
    <title>欢迎来到霍格沃兹魔法学院</title>
+   <link rel="shortcut icon" href="bitbug_favicon.ico">
 </head>
 <body>
 <h1>Welcome to Hogwarts!</h1>
