--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>欢迎来到霍格沃兹魔法学院</title>
+   <title>Welcome to Hogwarts!</title>
    <link rel="shortcut icon" href="bitbug_favicon.ico">
 </head>
 <body>
-<h1>Welcome to Hogwarts!</h1>
+<h1>
+   欢迎来到<mark><b>
+         <ruby>霍<rt>táo</rt>格<rt>xué</rt>沃<rt>shèng</rt>兹<rt>dì</rt></ruby>
+         魔法学院
+      </b></mark>
+</h1>
 </body>
 </html>
