--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -8,8 +8,24 @@
 <h1>
    欢迎来到<mark><b>
          <ruby>霍<rt>táo</rt>格<rt>xué</rt>沃<rt>shèng</rt>兹<rt>dì</rt></ruby>
-         魔法学院
-      </b></mark>
+      </b></mark>魔法学院
 </h1>
+<p>
+   以下是本周的
+   <strong>
+      <dfn id="课程表">
+         <abbr title="欢迎你使用时空转换器同时修很多门课噢">课程表</abbr></dfn>
+   </strong>
+   <dl>
+      <dt><i>周一</i></dt>
+      <dd>变形术      魔法史</dd>
+      <dt><i>周二</i></dt>
+      <dd>占卜术      魔药课</dd>
+      <dt><i>周三</i></dt>
+      <dd>麻瓜研究    黑魔法防御术</dd>
+      <dt><i>周四</i></dt>
+      <dd>天文学      神奇动物保护课</dd>
+   </dl>
+</p>
 </body>
 </html>
