--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -18,13 +18,13 @@
    </strong>
    <dl>
       <dt><i>周一</i></dt>
-      <dd>变形术      魔法史</dd>
+      <dd>变形术<br>魔法史</dd>
       <dt><i>周二</i></dt>
-      <dd>占卜术      魔药课</dd>
+      <dd>占卜术      <br>魔药课</dd>
       <dt><i>周三</i></dt>
-      <dd>麻瓜研究    黑魔法防御术</dd>
+      <dd>麻瓜研究    <br>黑魔法防御术</dd>
       <dt><i>周四</i></dt>
-      <dd>天文学      神奇动物保护课</dd>
+      <dd>天文学      <br>神奇动物保护课</dd>
    </dl>
 </p>
 </body>
