--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -27,5 +27,8 @@
       <dd>天文学      <br>神奇动物保护课</dd>
    </dl>
 </p>
+<p>
+   为什么只有<em>四天</em>的课？因为这个学校<mark>善</mark><br><small>教导主任不会告诉你其实是他周五忘记排课了</small>
+</p>
 </body>
 </html>
