--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -3,6 +3,21 @@
 <head>
    <title>Welcome to Hogwarts!</title>
    <link rel="shortcut icon" href="bitbug_favicon.ico">
+   <style>
+      body {
+       
+         background-image: url('background.jpg'); /* 替换为你的霍格沃兹图片路径 */
+         background-size: cover; /* 让图片覆盖整个页面 */
+         background-repeat: no-repeat; /* 不重复图片 */
+         background-attachment: fixed; /* 背景固定，不随滚动移动 */
+         color: #ffffff; /* 字体颜色改为白色，避免与背景冲突 */
+      }
+
+      h1 {
+         text-align: center;
+         font-family: "Times New Roman", serif;
+      }
+   </style>
 </head>
 <body>
 <h1>
