--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -5,8 +5,8 @@
    <link rel="shortcut icon" href="bitbug_favicon.ico">
    <style>
       body {
-       
-         background-image: url('background.jpg'); /* 替换为你的霍格沃兹图片路径 */
+         /* 使用背景图片 */
+         background-image: url('hogwarts.jpg'); /* 替换为你的霍格沃兹图片路径 */
          background-size: cover; /* 让图片覆盖整个页面 */
          background-repeat: no-repeat; /* 不重复图片 */
          background-attachment: fixed; /* 背景固定，不随滚动移动 */
@@ -16,6 +16,16 @@
       h1 {
          text-align: center;
          font-family: "Times New Roman", serif;
+      }
+
+      ruby rt {
+         font-size: 1.2em; /* 增大拼音字体大小 */
+         color: #dddddd; /* 设置拼音为浅灰色 */
+         font-style: italic; /* 可以选择性地加斜体，更具美观 */
+      }
+
+      ruby {
+         font-size: 1.5em; /* 增大整体字体大小 */
       }
    </style>
 </head>
