--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -48,7 +48,7 @@
    以下是本周的
    <strong>
       <dfn id="课程表">
-         <abbr title="欢迎你使用时空转换器同时修很多门课噢">课程表</abbr></dfn>
+         <abbr title="欢迎你使用时空转换器同时修很多门课噢">课程表（悬浮在这看看）</abbr></dfn>
    </strong>
    <dl>
       <dt><i>周一</i></dt>
