--- a/class4.html
+++ b/class4.html
@@ -9,14 +9,13 @@
     <h1>体温检测程序</h1>
     <p>请根据提示输入你的体温。</p>
     <script>
-        let temp = prompt("你多少度？");
-        if (temp > 39) {
-            alert("高烧");
-        } else if (temp > 37) {
-            alert("低烧");
-        } else {
-            alert("正常");
-        }
-    </script>
+    window.alert("你怎么打开了这个网页?!");
+    window.alert("我知道你有点好奇");
+    window.alert("你猜一会儿会发生什么?!");
+    window.alert("再等等!");
+    window.alert("也许有奇迹？");
+    window.alert("这是最后一句了!88");
+    window.alert("怎么还有?!");
+</script>
 </body>
 </html>
