--- a/class4.html
+++ b/class4.html
@@ -9,13 +9,11 @@
     <h1>体温检测程序</h1>
     <p>请根据提示输入你的体温。</p>
     <script>
-    window.alert("你怎么打开了这个网页?!");
-    window.alert("我知道你有点好奇");
-    window.alert("你猜一会儿会发生什么?!");
-    window.alert("再等等!");
-    window.alert("也许有奇迹？");
-    window.alert("这是最后一句了!88");
-    window.alert("怎么还有?!");
+    console.log('console.log()');
+    console.info('console.info()');
+    console.debug('console.debug()');
+    console.warn('console.warn()');
+    console.error('console.error()');
 </script>
 </body>
 </html>
