--- a/class4.html
+++ b/class4.html
@@ -9,11 +9,7 @@
     <h1>体温检测程序</h1>
     <p>请根据提示输入你的体温。</p>
     <script>
-    console.log('console.log()');
-    console.info('console.info()');
-    console.debug('console.debug()');
-    console.warn('console.warn()');
-    console.error('console.error()');
+    document.write("oeasy")
 </script>
 </body>
 </html>
