--- a/class4.html
+++ b/class4.html
@@ -9,7 +9,9 @@
     <h1>体温检测程序</h1>
     <p>请根据提示输入你的体温。</p>
     <script>
-    document.write("oeasy")
+    for(i=0,i<=3,i++){
+        document.write("i===="+i)
+    }
 </script>
 </body>
 </html>
