--- a/class4.html
+++ b/class4.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>体温检测</title>
-</head>
-<body>
-    <h1>体温检测程序</h1>
-    <p>请根据提示输入你的体温。</p>
-    <script>
-    for(i=0,i<=3,i++){
-        document.write("i===="+i)
-    }
-</script>
-</body>
+<html lang=en>
+    <head>
+        <meta charset="UTF-8">
+        <style>
+        </style>
+        <script>
+            for(i=0;i<=9;i++){
+                for(j=0;j<=9;j++){
+                    document.write(i+"*"+j+"="+i*j + " ");
+                }
+                document.write("<br>");
+            }
+        </script>
+        <title>Document</title>
+    </head>
+    <body>
+    </body>
 </html>
