--- a/class4.html
+++ b/class4.html
@@ -7,7 +7,13 @@
         <script>
             for(i=0;i<=9;i++){
                 for(j=0;j<=9;j++){
-                    document.write(i+"*"+j+"="+i*j + " ");
+                    document.write(i+"*"+j+"=")
+                    if (i*j>=10) {
+                        document.write(i*j + " | ")
+                    }
+                    else{
+                        document.write("&thinsp;&nbsp;" + i*j + " | ")
+                    }
                 }
                 document.write("<br>");
             }
