--- a/class4.html
+++ b/class4.html
@@ -1,19 +1,78 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<title>Sample of HTML Form Submission</title>
-<H1>Sample Questionnaire</H1>
-<P>Please fill out this questionnaire:
-<FORM METHOD="POST" ACTION="http://www.w3.org/sample">
-<P>Your name: <INPUT NAME="name" size="48">
-<P>Male <INPUT NAME="gender" TYPE=RADIO VALUE="male">
-<P>Female <INPUT NAME="gender" TYPE=RADIO VALUE="female">
-<P>Number in family: <INPUT NAME="family" TYPE=text>
-<P>Cities in which you maintain a residence:
-<UL>
-<LI>Kent <INPUT NAME="city" TYPE=checkbox VALUE="kent">
-<LI>Miami <INPUT NAME="city" TYPE=checkbox VALUE="miami">
-<LI>Other <TEXTAREA NAME="other" cols=48 rows=4></textarea>
-</UL>
-Nickname: <INPUT NAME="nickname" SIZE="42">
-<P>Thank you for responding to this questionnaire.
-<P><INPUT TYPE=SUBMIT> <INPUT TYPE=RESET>
-</FORM>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    form {
+      width: 50%;
+      margin: 0 auto;
+    }
+
+    label {
+      display: block;
+    }
+
+    input[type="radio"] {
+      margin-right: 5px;
+    }
+
+    button {
+      display: block;
+      margin: 10px auto;
+    }
+
+    #result {
+      text-align: center;
+      font-weight: bold;
+    }
+  </style>
+  <title>MBTI 测试</title>
+</head>
+
+<body>
+  <h1>MBTI 测试</h1>
+  <form id="mbtiForm">
+    <label>问题 1：你更喜欢独处还是和一群人在一起？</label>
+    <input type="radio" name="q1" value="独处">独处
+    <input type="radio" name="q1" value="一群人">一群人<br>
+
+    <label>问题 2：你更注重逻辑还是情感？</label>
+    <input type="radio" name="q2" value="逻辑">逻辑
+    <input type="radio" name="q2" value="情感">情感<br>
+
+    <button type="submit">提交</button>
+  </form>
+  <div id="result"></div>
+  <script>
+    const form = document.getElementById('mbtiForm');
+    const resultDiv = document.getElementById('result');
+
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+      const answers = {
+        q1: form.q1.value,
+        q2: form.q2.value
+      };
+      let mbtiType = '';
+      if (answers.q1 === '独处' && answers.q2 === '逻辑') {
+        mbtiType = 'INTJ';
+      } else if (answers.q1 === '一群人' && answers.q2 === '情感') {
+        mbtiType = 'ESFJ';
+      }
+      // 根据不同的答案组合确定 MBTI 类型
+      resultDiv.textContent = `你的 MBTI 类型是：${mbtiType}`;
+    });
+  </script>
+</body>
+
+</html>
