--- a/class4.html
+++ b/class4.html
@@ -26,6 +26,10 @@
       margin-right: 5px;
     }
 
+    input[type="range"] {
+      width: 200px;
+    }
+
     button {
       display: block;
       margin: 10px auto;
@@ -42,13 +46,20 @@
 <body>
   <h1>MBTI 测试</h1>
   <form id="mbtiForm">
-    <label>问题 1：你更喜欢独处还是和一群人在一起？</label>
-    <input type="radio" name="q1" value="独处">独处
-    <input type="radio" name="q1" value="一群人">一群人<br>
+    <label>当你参加社交活动时，你通常：</label>
+    <input type="radio" name="q1" value="主动与人交流">主动与人交流
+    <input type="radio" name="q1" value="等待别人来交流">等待别人来交流<br>
 
-    <label>问题 2：你更注重逻辑还是情感？</label>
-    <input type="radio" name="q2" value="逻辑">逻辑
-    <input type="radio" name="q2" value="情感">情感<br>
+    <label>对于做决策，你更倾向于：</label>
+    <input type="radio" name="q2" value="基于逻辑和分析">基于逻辑和分析
+    <input type="radio" name="q2" value="考虑他人感受和价值观">考虑他人感受和价值观<br>
+
+    <label>在处理任务时，你：</label>
+    <input type="radio" name="q3" value="提前规划，有条不紊">提前规划，有条不紊
+    <input type="radio" name="q3" value="灵活应变，随机处理">灵活应变，随机处理<br>
+
+    <label>请对以下描述进行打分（1-5 分）：你喜欢独自思考问题。</label>
+    <input type="range" name="q4" min="1" max="5"><br>
 
     <button type="submit">提交</button>
   </form>
@@ -61,15 +72,17 @@
       e.preventDefault();
       const answers = {
         q1: form.q1.value,
-        q2: form.q2.value
+        q2: form.q2.value,
+        q3: form.q3.value,
+        q4: form.q4.value
       };
       let mbtiType = '';
-      if (answers.q1 === '独处' && answers.q2 === '逻辑') {
-        mbtiType = 'INTJ';
-      } else if (answers.q1 === '一群人' && answers.q2 === '情感') {
-        mbtiType = 'ESFJ';
+      // 根据答案进行简单的判断确定 MBTI 类型，实际需要更复杂的算法
+      if (answers.q1 === '主动与人交流' && answers.q2 === '基于逻辑和分析' && answers.q3 === '提前规划，有条不紊' && answers.q4 > 3) {
+        mbtiType = 'ENTJ';
+      } else if (answers.q1 === '等待别人来交流' && answers.q2 === '考虑他人感受和价值观' && answers.q3 === '灵活应变，随机处理' && answers.q4 < 3) {
+        mbtiType = 'ISFP';
       }
-      // 根据不同的答案组合确定 MBTI 类型
       resultDiv.textContent = `你的 MBTI 类型是：${mbtiType}`;
     });
   </script>
