--- a/class4.html
+++ b/class4.html
@@ -1,91 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MBTI 测试</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
 
-    h1 {
-      text-align: center;
-    }
+        #question-container {
+            text-align: center;
+        }
 
-    form {
-      width: 50%;
-      margin: 0 auto;
-    }
+        #question {
+            margin-bottom: 20px;
+        }
 
-    label {
-      display: block;
-    }
-
-    input[type="radio"] {
-      margin-right: 5px;
-    }
-
-    input[type="range"] {
-      width: 200px;
-    }
-
-    button {
-      display: block;
-      margin: 10px auto;
-    }
-
-    #result {
-      text-align: center;
-      font-weight: bold;
-    }
-  </style>
-  <title>MBTI 测试</title>
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
 </head>
-
 <body>
-  <h1>MBTI 测试</h1>
-  <form id="mbtiForm">
-    <label>当你参加社交活动时，你通常：</label>
-    <input type="radio" name="q1" value="主动与人交流">主动与人交流
-    <input type="radio" name="q1" value="等待别人来交流">等待别人来交流<br>
+    <div id="question-container">
+        <div id="question">问题内容将在这里显示</div>
+        <button id="next-button">下一题</button>
+    </div>
+    <script>
+        const questions = [
+            "你在社交场合通常是？",
+            "你做决定时更倾向于依赖？",
+            "你通常喜欢计划和安排？",
+            // 添加更多问题
+        ];
+        let currentQuestionIndex = 0;
 
-    <label>对于做决策，你更倾向于：</label>
-    <input type="radio" name="q2" value="基于逻辑和分析">基于逻辑和分析
-    <input type="radio" name="q2" value="考虑他人感受和价值观">考虑他人感受和价值观<br>
+        document.getElementById('next-button').addEventListener('click', function() {
+            currentQuestionIndex++;
+            if (currentQuestionIndex < questions.length) {
+                document.getElementById('question').textContent = questions[currentQuestionIndex];
+            } else {
+                document.getElementById('question').textContent = "测试结束！";
+                this.style.display = 'none'; // 隐藏按钮
+            }
+        });
 
-    <label>在处理任务时，你：</label>
-    <input type="radio" name="q3" value="提前规划，有条不紊">提前规划，有条不紊
-    <input type="radio" name="q3" value="灵活应变，随机处理">灵活应变，随机处理<br>
-
-    <label>请对以下描述进行打分（1-5 分）：你喜欢独自思考问题。</label>
-    <input type="range" name="q4" min="1" max="5"><br>
-
-    <button type="submit">提交</button>
-  </form>
-  <div id="result"></div>
-  <script>
-    const form = document.getElementById('mbtiForm');
-    const resultDiv = document.getElementById('result');
-
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const answers = {
-        q1: form.q1.value,
-        q2: form.q2.value,
-        q3: form.q3.value,
-        q4: form.q4.value
-      };
-      let mbtiType = '';
-      // 根据答案进行简单的判断确定 MBTI 类型，实际需要更复杂的算法
-      if (answers.q1 === '主动与人交流' && answers.q2 === '基于逻辑和分析' && answers.q3 === '提前规划，有条不紊' && answers.q4 > 3) {
-        mbtiType = 'ENTJ';
-      } else if (answers.q1 === '等待别人来交流' && answers.q2 === '考虑他人感受和价值观' && answers.q3 === '灵活应变，随机处理' && answers.q4 < 3) {
-        mbtiType = 'ISFP';
-      }
-      resultDiv.textContent = `你的 MBTI 类型是：${mbtiType}`;
-    });
-  </script>
+        document.getElementById('question').textContent = questions[0]; // 初始化第一个问题
+    </script>
 </body>
-
 </html>
