--- a/class4.html
+++ b/class4.html
@@ -1,59 +1,94 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBTI 测试</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
 
-        #question-container {
-            text-align: center;
-        }
+    h1 {
+      text-align: center;
+    }
 
-        #question {
-            margin-bottom: 20px;
-        }
+   .question-container {
+      width: 50%;
+      margin: 0 auto;
+    }
 
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
+    label {
+      display: block;
+    }
+
+    input[type="radio"] {
+      margin-right: 5px;
+    }
+
+   .next-button {
+      display: block;
+      margin: 10px auto;
+    }
+
+    #result {
+      text-align: center;
+      font-weight: bold;
+    }
+  </style>
+  <title>MBTI 测试</title>
 </head>
+
 <body>
-    <div id="question-container">
-        <div id="question">问题内容将在这里显示</div>
-        <button id="next-button">下一题</button>
-    </div>
-    <script>
-        const questions = [
-            "你在社交场合通常是？",
-            "你做决定时更倾向于依赖？",
-            "你通常喜欢计划和安排？",
-            // 添加更多问题
-        ];
-        let currentQuestionIndex = 0;
-
-        document.getElementById('next-button').addEventListener('click', function() {
-            currentQuestionIndex++;
-            if (currentQuestionIndex < questions.length) {
-                document.getElementById('question').textContent = questions[currentQuestionIndex];
-            } else {
-                document.getElementById('question').textContent = "测试结束！";
-                this.style.display = 'none'; // 隐藏按钮
-            }
-        });
-
-        document.getElementById('question').textContent = questions[0]; // 初始化第一个问题
-    </script>
-</body>
-</html>
+  <h1>MBTI 测试</h1>
+  <div id="question1" class="question-container">
+    <label>当你参加社交活动时，你通常：</label>
+    <input type="radio" name="q1" value="主动与人交流">主动与人交流
+    <input type="radio" name="q1" value="等待别人来交流">等待别人来交流
+  </div>
+  <button id="next1" class="next-button">下一页</button>
+  <div id="question2" class="question-container" style="display:none;">
+    <label>对于做决策，你更倾向于：</label>
+    <input type="radio" name="q2" value="基于逻辑和分析">基于逻辑和分析
+    <input type="radio" name="q2" value="考虑他人感受和价值观">考虑他人感受和价值观
+  </div>
+  <button id="next2" class="next-button" style="display:none;">下一页</button>
+  <div id="question3" class="question-container" style="display:none;">
+    <label>在处理任务时，你：</label>
+    <input type="radio" name="q3" value="提前规划，有条不紊">提前规划，有条不紊
+    <input type="radio" name="q3" value="灵活应变，随机处理">灵活应变，随机处理
+  </div>
+  <button id="next3" class="next-button" style="display:none;">下一页</button>
+  <div id="question4" class="question-container" style="display:none;">
+    <label>请对以下描述进行打分（1-5 分）：你喜欢独自思考问题。</label>
+    <input type="range" name="q4" min="1" max="5">
+  </div>
+  <button id="submit" class="next-button" style="display:none;">提交</button>
+  <div id="result"></div>
+  <script>
+    let currentQuestion = 1;
+    document.getElementById('next1').addEventListener('click', function () {
+      document.getElementById('question1').style.display = 'none';
+      document.getElementById('next1').style.display = 'none';
+      document.getElementById('question2').style.display = 'block';
+      document.getElementById('next2').style.display = 'block';
+      currentQuestion = 2;
+    });
+    document.getElementById('next2').addEventListener('click', function () {
+      document.getElementById('question2').style.display = 'none';
+      document.getElementById('next2').style.display = 'none';
+      document.getElementById('question3').style.display = 'block';
+      document.getElementById('next3').style.display = 'block';
+      currentQuestion = 3;
+    });
+    document.getElementById('next3').addEventListener('click', function () {
+      document.getElementById('question3').style.display = 'none';
+      document.getElementById('next3').style.display = 'none';
+      document.getElementById('question4').style.display = 'block';
+      document.getElementById('submit').style.display = 'block';
+      currentQuestion = 4;
+    });
+    document.getElementById('submit').addEventListener('click', function () {
+      const answers = {
+        q1: document.querySelector('input[name="q1"]:checked')?.value,
+        q2: document.querySelector('input[name="q2"]:checked
