--- a/class4.html
+++ b/class4.html
@@ -13,20 +13,7 @@
       text-align: center;
     }
 
-   .question-container {
-      width: 50%;
-      margin: 0 auto;
-    }
-
-    label {
-      display: block;
-    }
-
-    input[type="radio"] {
-      margin-right: 5px;
-    }
-
-   .next-button {
+    button {
       display: block;
       margin: 10px auto;
     }
@@ -41,54 +28,75 @@
 
 <body>
   <h1>MBTI 测试</h1>
-  <div id="question1" class="question-container">
-    <label>当你参加社交活动时，你通常：</label>
-    <input type="radio" name="q1" value="主动与人交流">主动与人交流
-    <input type="radio" name="q1" value="等待别人来交流">等待别人来交流
-  </div>
-  <button id="next1" class="next-button">下一页</button>
-  <div id="question2" class="question-container" style="display:none;">
-    <label>对于做决策，你更倾向于：</label>
-    <input type="radio" name="q2" value="基于逻辑和分析">基于逻辑和分析
-    <input type="radio" name="q2" value="考虑他人感受和价值观">考虑他人感受和价值观
-  </div>
-  <button id="next2" class="next-button" style="display:none;">下一页</button>
-  <div id="question3" class="question-container" style="display:none;">
-    <label>在处理任务时，你：</label>
-    <input type="radio" name="q3" value="提前规划，有条不紊">提前规划，有条不紊
-    <input type="radio" name="q3" value="灵活应变，随机处理">灵活应变，随机处理
-  </div>
-  <button id="next3" class="next-button" style="display:none;">下一页</button>
-  <div id="question4" class="question-container" style="display:none;">
-    <label>请对以下描述进行打分（1-5 分）：你喜欢独自思考问题。</label>
-    <input type="range" name="q4" min="1" max="5">
-  </div>
-  <button id="submit" class="next-button" style="display:none;">提交</button>
+  <button id="startButton">开始测试</button>
   <div id="result"></div>
   <script>
-    let currentQuestion = 1;
-    document.getElementById('next1').addEventListener('click', function () {
-      document.getElementById('question1').style.display = 'none';
-      document.getElementById('next1').style.display = 'none';
-      document.getElementById('question2').style.display = 'block';
-      document.getElementById('next2').style.display = 'block';
-      currentQuestion = 2;
-    });
-    document.getElementById('next2').addEventListener('click', function () {
-      document.getElementById('question2').style.display = 'none';
-      document.getElementById('next2').style.display = 'none';
-      document.getElementById('question3').style.display = 'block';
-      document.getElementById('next3').style.display = 'block';
-      currentQuestion = 3;
-    });
-    document.getElementById('next3').addEventListener('click', function () {
-      document.getElementById('question3').style.display = 'none';
-      document.getElementById('next3').style.display = 'none';
-      document.getElementById('question4').style.display = 'block';
-      document.getElementById('submit').style.display = 'block';
-      currentQuestion = 4;
-    });
-    document.getElementById('submit').addEventListener('click', function () {
-      const answers = {
-        q1: document.querySelector('input[name="q1"]:checked')?.value,
-        q2: document.querySelector('input[name="q2"]:checked
+    let currentQuestion = 0;
+    const questions = [
+      {
+        type: "choice",
+        text: "当你参加社交活动时，你通常：",
+        options: ["主动与人交流", "等待别人来交流"]
+      },
+      {
+        type: "scale",
+        text: "请对以下描述进行打分（1-5 分）：你喜欢独自思考问题。",
+        min: 1,
+        max: 5
+      },
+      {
+        type: "choice",
+        text: "对于做决策，你更倾向于：",
+        options: ["基于逻辑和分析", "考虑他人感受和价值观"]
+      },
+      {
+        type: "sort",
+        text: "请将以下活动按照你的喜好进行排序（1 为最喜欢，3 为最不喜欢）：阅读、运动、社交",
+        options: ["阅读", "运动", "社交"]
+      },
+      {
+        type: "scale",
+        text: "请对以下描述进行打分（1-5 分）：你喜欢尝试新事物。",
+        min: 1,
+        max: 5
+      }
+    ];
+    const resultDiv = document.getElementById('result');
+    document.getElementById('startButton').addEventListener('click', showQuestion);
+
+    function showQuestion() {
+      document.getElementById('startButton').style.display = 'none';
+      if (currentQuestion < questions.length) {
+        if (questions[currentQuestion].type === "choice") {
+          const choice = window.prompt(questions[currentQuestion].text, "");
+          if (choice!== null) {
+            // 可以在这里存储答案，或者传递给其他函数处理
+            currentQuestion++;
+            showQuestion();
+          }
+        } else if (questions[currentQuestion].type === "scale") {
+          const scaleAnswer = parseInt(window.prompt(questions[currentQuestion].text, ""));
+          if (!isNaN(scaleAnswer) && scaleAnswer >= questions[currentQuestion].min && scaleAnswer <= questions[currentQuestion].max) {
+            // 存储答案或处理
+            currentQuestion++;
+            showQuestion();
+          }
+        } else if (questions[currentQuestion].type === "sort") {
+          const sortedOptions = window.prompt(questions[currentQuestion].text + "（请用逗号分隔答案）", "");
+          if (sortedOptions!== null) {
+            const answerArray = sortedOptions.split(',');
+            if (answerArray.length === questions[currentQuestion].options.length && answerArray.every(item => questions[currentQuestion].options.includes(item))) {
+              // 存储答案或处理
+              currentQuestion++;
+              showQuestion();
+            }
+          }
+        }
+      } else {
+        resultDiv.textContent = "测试完成！";
+      }
+    }
+  </script>
+</body>
+
+</html>
