--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="shortcut icon" href="bitbug_favicon.ico">
 </head>
 <body>
-<h1>刻舟求剑</h1>
+<h1><ruby>刻<rt>kè</rt>舟<rt>zhōu</rt>求<rt>qiú</rt>剑<rt>jiàn</rt></ruby></h1>
 <ul>
   <li>Carving a boat for a sword</li>
   <li>Once upon a time,there was a Chu people crossing the river by boat. </li>
