--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <li>When the ship docked,he went into the water to find the sword according to the engraved mark,and naturally found nothing.</li>
 </ul>
 <img src="刻舟求剑小.png">
-<audio src="oeasy.mp3" autoplay="" controls="" style="height:40px;width:66%;">
+<ol>
+  <li>首先找到一个有故事性的成语</li>
+  <li>然后在coze上搭建一个“成语故事”机器人，要求他用5-6句话讲清楚这个成语的故事和寓意。</li>
+  <li>接着把这一段话放进liblab中，使用“文生图”功能生成图片</li>
+</ol>接着把这一段话放进liblab中生成
 </body>
 </html>
