--- a/index_video.html
+++ b/index_video.html
@@ -1,18 +1,49 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>视频解说刻舟求剑</title>
   <link rel="shortcut icon" href="bitbug_favicon.ico">
+  <style>
+    /* 使用flexbox布局，使视频和音频不重叠 */
+    .media-container {
+      display: flex;
+      flex-direction: column; /* 使它们垂直排列 */
+      gap: 20px; /* 增加它们之间的间距 */
+      align-items: center; /* 水平居中对齐 */
+    }
+
+    audio {
+      width: 60%; /* 音频控件占据页面的60%宽度 */
+      height: 40px;
+    }
+
+    iframe {
+      width: 80%; /* 视频占据页面的80%宽度 */
+      height: 450px; /* 调整视频高度 */
+    }
+  </style>
 </head>
 <body>
-<h1>视频：刻舟求剑的故事</h1>
-<ul>
-  <li>A man stood in the boat with a sword in his hand,looking proud.</li>
-  <li>The boat is driving in the river,and suddenly this man's sword falls into the water.</li>
-  <li>The man hurriedly carved a mark on the side of the boat where the sword fell into the water.</li>
-  <li>The boat continued to move,and when it reached the shore,the man went into the water to look for the sword at the side of the boat according to the mark.</li>
-  <li>The man groped around in the water,his face puzzled,but he could not find the sword.</li>
-</ul>>
-<audio src="Moonlit Whispers.mp3" autoplay="" controls="" style="height: 40px; width: 66%;">
-<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113542627920057&bvid=BV1nBzcY5Ehz&cid=27002407460&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+  <h1>视频：刻舟求剑的故事</h1>
+  <ul>
+    <li>A man stood in the boat with a sword in his hand, looking proud.</li>
+    <li>The boat is driving in the river, and suddenly this man's sword falls into the water.</li>
+    <li>The man hurriedly carved a mark on the side of the boat where the sword fell into the water.</li>
+    <li>The boat continued to move, and when it reached the shore, the man went into the water to look for the sword at the side of the boat according to the mark.</li>
+    <li>The man groped around in the water, his face puzzled, but he could not find the sword.</li>
+  </ul>
+
+  <!-- 媒体容器：音频和视频 -->
+  <div class="media-container">
+    <!-- 音频控件 -->
+    <audio src="Moonlit Whispers.mp3" autoplay controls>
+    </audio>
+
+    <!-- 视频嵌入 -->
+    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113542627920057&bvid=BV1nBzcY5Ehz&cid=27002407460&p=1" scrolling="no" frameborder="0" allowfullscreen="true">
+    </iframe>
+  </div>
 </body>
 </html>
