--- a/class4.html
+++ b/class4.html
@@ -1,29 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <script>
-        function getValue() {
-            // 获取输入框值并转换为数字
-            const i1 = parseFloat(document.getElementById("i1").value) || 0; // 如果为空，默认值为0
-            const i2 = parseFloat(document.getElementById("i2").value) || 0; // 如果为空，默认值为0
-            const p1 = document.getElementById("p1");
-
-            // 计算总价
-            const price = i1 * i2;
-
-            // 显示结果
-            p1.innerText = "总价：" + price.toFixed(2) + " 元"; // 保留两位小数
-        }
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+   .calculator {
+      border: 1px solid #ccc;
+      padding: 20px;
+      width: 300px;
+      margin: 20px auto;
+    }
+    input[type="number"] {
+      width: 100px;
+      margin: 5px;
+    }
+    button {
+      margin: 5px;
+    }
+    #result {
+      font-weight: bold;
+      margin-top: 10px;
+    }
+  </style>
+  <title>网页计算器</title>
 </head>
+
 <body>
-    <label for="i1">西瓜单价：</label>
-    <input id="i1" type="number" placeholder="请输入单价"> X 
-    <label for="i2">西瓜重量：</label>
-    <input id="i2" type="number" placeholder="请输入重量">
-    <button id="b1" type="button" onclick="getValue()">计算总价</button>
-    <p id="p1">总价将显示在这里。</p>
+  <div class="calculator">
+    <input type="number" id="num1">
+    <input type="number" id="num2">
+    <button onclick="add()">+</button>
+    <button onclick="subtract()">-</button>
+    <button onclick="multiply()">×</button>
+    <button onclick="divide()">÷</button>
+    <div id="result"></div>
+  </div>
+  <script>
+    function add() {
+      const num1 = parseInt(document.getElementById('num1').value);
+      const num2 = parseInt(document.getElementById('num2').value);
+      if (!isNaN(num1) &&!isNaN(num2)) {
+        document.getElementById('result').textContent = num1 + num2;
+      } else {
+        document.getElementById('result').textContent = '请输入有效的数字。';
+      }
+    }
+    function subtract() {
+      const num1 = parseInt(document.getElementById('num1').value);
+      const num2 = parseInt(document.getElementById('num2').value);
+      if (!isNaN(num1) &&!isNaN(num2)) {
+        document.getElementById('result').textContent = num1 - num2;
+      } else {
+        document.getElementById('result').textContent = '请输入有效的数字。';
+      }
+    }
+    function multiply() {
+      const num1 = parseInt(document.getElementById('num1').value);
+      const num2 = parseInt(document.getElementById('num2').value);
+      if (!isNaN(num1) &&!isNaN(num2)) {
+        document.getElementById('result').textContent = num1 * num2;
+      } else {
+        document.getElementById('result').textContent = '请输入有效的数字。';
+      }
+    }
+    function divide() {
+      const num1 = parseInt(document.getElementById('num1').value);
+      const num2 = parseInt(document.getElementById('num2').value);
+      if (!isNaN(num1) &&!isNaN(num2) && num2!== 0) {
+        document.getElementById('result').textContent = num1 / num2;
+      } else {
+        document.getElementById('result').textContent = '请输入有效的数字且除数不能为 0。';
+      }
+    }
+  </script>
 </body>
+
 </html>
