--- a/Hogwarts.html
+++ b/Hogwarts.html
@@ -5,7 +5,7 @@
    <link rel="shortcut icon" href="bitbug_favicon.ico">
    <style>
       body {
-         background-image: url('background.jpg'); /* 替换为霍格沃兹图片路径 */
+         background-image: url('background.jpg');
          background-size: cover;
          background-repeat: no-repeat;
          background-attachment: fixed;
@@ -13,7 +13,7 @@
          font-family: "Times New Roman", serif;
          margin: 0;
          padding: 0;
-         text-align: center; /* 全局内容居中 */
+         text-align: center; 
       }
 
       h1, h2, h3, h4, h5, h6 {
@@ -24,7 +24,7 @@
       h1 {
          font-size: 3em;
          color: #ffd700;
-         text-transform: uppercase; /* 大写标题 */
+         text-transform: uppercase; 
       }
 
       h2 {
@@ -49,7 +49,7 @@
          margin: 20px auto;
          max-width: 800px;
          box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
-         display: inline-block; /* 居中块元素 */
+         display: inline-block;
          text-align: center;
       }
 
@@ -173,11 +173,11 @@
       <p>魔法不仅是天赋，更是一种责任。</p>
    </div>
    <footer>
-      <h6>霍格沃兹校史</h6>
+      <h6><em>霍格沃兹校史</em></h6>
       <p>
-         <q>魔法的本质是发现并创造奇迹。</q> - <cite>《霍格沃兹校史》</cite>
+         <q>魔法的本质是发现并创造奇迹<sup>miracles!</sup>。</q> - <cite>《霍格沃兹校史》</cite>
       </p>
-      <small>&copy; 2024 霍格沃兹魔法学院. 魔法永存！</small>
+      <small>&copy; 2024 霍格沃兹魔法学院. 魔法永存！<sub>end!</sub></small>
    </footer>
 </body>
 </html>
